Thu Aug 27 01:08:56 1998  Andrew Veliath  <andrewtv@usa.net>

	* IDL.h: Removed IDL_TRUE and IDL_FALSE, so we can just use the
	  glib TRUE and FALSE.  References switched...

	* util.c (IDL_tree_walk_in_order): (...pre_order changed to the
	more accurate ...in_order).  Behavior change, return value is now
	void, and returning TRUE from the IDL_tree_func means traverse
	this node, and FALSE means don't traverse this node, instead of
	the previous return FALSE and stop traversal all together.  This
	is much more useful for this context, I think.

Wed Aug 26 01:48:12 1998  Andrew Veliath  <andrewtv@usa.net>

	* util.c (IDL_tree_process_forward_dcls),
		(IDL_tree_remove_inhibits),
		(IDL_tree_remove_empty_modules): Remove debugging messages.

	* util.c (IDL_parse_filename): Only run optimization if tree is
	  non-NULL, and improve useless file message.

	* parser.y: Complete previous declaration context error messages.

1998-08-25  Andrew Veliath  <andrewtv@usa.net>

	* Update libIDL version to 0.4.0.
	
	* Update font lock keywords in README, added support for
	  __declspec.
	
	* Implementation of IDL_tree_free for IDLN_GENTREE hashes in
	  place.

	* Makefile.am: Change libtool version to 3:2:3.
	
	* parser.y, IDL.h: Changes for global ref counting.
	
	* util.c (IDL_tree_free): Instead of ref counting only IDENTS,
	  ref count all nodes instead (updated __IDL_tree_free, added
	  IDL_tree_free_real).  Update remove_list_node to reflect this
	  change.

	* util.h: Remove __IDL_tree_free.

	* util.c (__IDL_tree_free): Ref count IDLN_IDENTS.

Tue Aug 25 01:46:10 1998  Tom Tromey  <tromey@cygnus.com>

	* util.c (IDL_strcase_equal): Use g_strcasecmp.
	(IDL_strcase_cmp): Likewise.

1998-08-24  Andrew Veliath  <andrewtv@usa.net>

	* Save inhibited nodes and free upon IDL_ns_free so that the full
	trees are available to traverse from the namespace.
	 
	* 'nostubs' changed to 'inhibit'

1998-08-17  Andrew Veliath  <andrewtv@usa.net>

	* Update version to 0.3
