@@ -1,3 +1,9 @@
+Thu Aug 27 03:30:44 1998  Andrew Veliath  <andrewtv@usa.net>
+
+	* parser.y: Generate error if one tries to inherit from the same
+	interface more than once.  Also use IDL_ns_ident_to_qstring to
+	give more concise identifiers in error messages.
+
 Thu Aug 27 01:08:56 1998  Andrew Veliath  <andrewtv@usa.net>
 
 	* IDL.h: Removed IDL_TRUE and IDL_FALSE, so we can just use the
